--- a/src/components/project/project.scss
+++ b/src/components/project/project.scss
@@ -2,7 +2,7 @@
   width: 40%;
   height: 30vh;
   margin: 20px 10px;
-  border: 2px solid #f3f2f2;
+  border: 2px solid #ccc;
   border-radius: 10px 10px 0px 0px;
   overflow: hidden;
 
